2007-07-30  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (mono_execute_request): initialize the global
	mutex in the child process at the first request after we
	initialize mod_mono. The call needs to be made in the child
	process, so it can't stay in the initialization section of
	ensure_dashboard_initialized.
	(ensure_dashboard_initialized): if necessary, set the global mutex
	permissions.

2007-07-26  Marek Habersack  <mhabersack@novell.com>

	* man/mod_mono.8.in: added documentation for the new directives

	* src/mod_mono.c: implemented backend auto-restart feature, along
	with corresponding configuration directives, cross-process (or
	cross-thread) locking. The housekeeping data is kept in a
	per-backend shared memory segment (a dashboard) and is protected
	with a mutex. The backends can be auto-restarted based on the
	number of requests served, or their uptime.
	Removed some debug statements.

2007-07-19  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (mono_execute_request): added support for
	restarting backends which disappeared.
	(mono_cmds): defined two new configuration directives:
	MonoXSPStartAttempts and MonoXSPStartWaitTime, used by code
	introduced above.
	
	* man/mod_mono.8.in: added documentation for the two new
	directives.

2007-07-18  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c: if APR has uid/gid support and
	we're not compiling for WIN32, start the backends from the module
	post config handler, it avoids launching of many backends on
	startup.

2007-07-14  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (do_command): added error logging
	(write_data): as above
	(read_data): as above

	* src/mod_mono.h (STATCODE_AND_SERVER): new macro to add support
	for non-zero status codes (the status code is ignored for Apache <
	2.0).

2007-06-20  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (send_initial_data): added support for
	ServerAlias directive. Patch from Juraj Skripsky